--- a/app/views/public/lbr/_interview.html.erb
+++ b/app/views/public/lbr/_interview.html.erb
@@ -6,7 +6,7 @@
         <div class="interview-card">
           <div class="staff-img"><%= image_tag('lbr/staff1.png', class: 'owner-img') %></div>
           <div class="staff-post">取締役</div>
-          <div class="staff-name">佐藤 保<span class="staff-name-en">KOHEI SATO</span></div>
+          <div class="staff-name">佐藤 保<span class="staff-name-en">TAMOTSU SATO</span></div>
           <div class="employ-date">創業メンバー</div>
           <div class="staff-text">
             あそこに入社して成長できた<br>
