--- a/app/views/public/lbr/message.html.erb
+++ b/app/views/public/lbr/message.html.erb
@@ -1,11 +1,11 @@
 <% set_meta_tags  title: '社長メッセージ',
                   description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の社長メッセージ。突然ですが、私には夢があります。私の夢はこのブラックな飲食業界を変えることです。
-                                そのためには、オーナー自身の覚悟が問われます。会社の存続と従業員を幸せにすることを同時に達成する覚悟です。このメッセージを見ているあなたも、ぜひともに飲食業界を憧れの業界にしていきませんか？',
+                                そのためには、オーナー自身の覚悟が問われます。会社の存続と従業員を豊かにすることを同時に達成する覚悟です。このメッセージを見ているあなたも、ぜひともに飲食業界を憧れの業界にしていきませんか？',
                   canonical: 'https://lbrestaurant.net/lbr/message/',
                   og: {
                     title: '社長メッセージ | LBrestaurant(株式会社)公式サイト(暖簾分け希望者、求職者募集中!)',
                     description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の社長メッセージ。突然ですが、私には夢があります。私の夢はこのブラックな飲食業界を変えることです。
-                                  そのためには、オーナー自身の覚悟が問われます。会社の存続と従業員を幸せにすることを同時に達成する覚悟です。このメッセージを見ているあなたも、ぜひともに飲食業界を憧れの業界にしていきませんか？',
+                                  そのためには、オーナー自身の覚悟が問われます。会社の存続と従業員を豊かにすることを同時に達成する覚悟です。このメッセージを見ているあなたも、ぜひともに飲食業界を憧れの業界にしていきませんか？',
                     type: 'article',
                     url: 'https://lbrestaurant.net/lbr/message/'
                   }
@@ -21,7 +21,7 @@
         はじめまして、当社のホームページをご覧いただきありがとうございます。<br>
         突然ですが、私には夢があります。<br>
         私の夢はこのブラックな飲食業界を変えることです。<br>
-        そのためには、オーナー自身の覚悟が問われます。会社の存続と従業員を幸せにすることを同時に達成する覚悟です。
+        そのためには、オーナー自身の覚悟が問われます。会社の存続と従業員を豊かにすることを同時に達成する覚悟です。
       </p>
       <p class="owner-message-text">
         私自身、３７歳まで飲食業界とは無縁でした。<br>
@@ -62,3 +62,4 @@
   </div>
 </div>
 <%= render 'interview' %>
+<%= render 'public/shared/carrer-contents' %>
