--- a/app/views/public/lbr/show.html.erb
+++ b/app/views/public/lbr/show.html.erb
@@ -19,10 +19,14 @@
     <div class="lbr-dream-title"><%= image_tag('lbr/dream-title.png', class: 'dream-title-img sm-max-img') %></div>
     <ul class="lbr-dream-subtitle">
       <li>
-        地域密着の飲食店の創出<br class="sm-display"><span class="lbr-dream-subtitle-logo">×</span><br class="sm-display">店長の高収入<br class="sm-display"><span class="lbr-dream-subtitle-logo">×</span><br class="sm-display">店長の人間らしい生活
+        地域1番店の創出<br class="sm-display">
+        <span class="lbr-dream-subtitle-logo">×</span><br class="sm-display">
+        高収入<br class="sm-display">
+        <span class="lbr-dream-subtitle-logo">×</span><br class="sm-display">
+        ワークライフバランスの取れた生活<span class="default-text lbr-dream-subtitle-margin">を同時に達成する</span>
       </li>
       <li>
-        <span class="default-text lbr-dream-subtitle-margin">を同時に達成する</span><br class="sm-display">’ブラックな業界を変える！’
+        ’ブラックな業界を変える！’
       </li>
     </ul>
     <div class="lbr-dream-text-box">
@@ -33,7 +37,7 @@
       </p>
       <p class="lbr-dream-text">
         お店は<span class="alert-text">従業員が輝いてないと、輝きません。</span><br>
-        全ての店舗ビジネスに通ずる<span class="alert-text">心理</span>です。<br>
+        全ての店舗ビジネスに通ずる<span class="alert-text">真理</span>です。<br>
         <span class="alert-text">輝いてる従業員は店長になれます。</span><br>
         そして、その輝いてる店長の数だけ店舗を増やせます。
       </p>
@@ -45,7 +49,7 @@
     <div class="lbr-mission-title"><%= image_tag('lbr/mission-title.png', class: 'mission-title-img sm-max-img') %></div>
     <ul class="lbr-mission-text-box">
       <li>地域で１番の○○を多くの業態で創出する（流行りはおわない）</li>
-      <li>ぼったくたないのれん分け制度を確立する</li>
+      <li>ぼったくりのないのれん分け制度を確立する</li>
       <li>自助・共助の精神で各オーナーや本部と助け合うことで休みをとれる体制を構築する</li>
     </ul>
     <div class="lbr-dream-link">
@@ -117,7 +121,7 @@
     </div>
   </div>
 </div>
-<%= render 'public/shared/carrer-contents' %>
+
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     const mySwiper1 = new Swiper('.swiper1', {
@@ -136,6 +140,7 @@
         pauseOnMouseEnter: false,
         reverseDirection: false
       },
+      speed: 800
     });
 
     const mySwiper2 = new Swiper('.swiper2', {
@@ -154,5 +159,6 @@
         pauseOnMouseEnter: false,
         reverseDirection: false
       },
+      speed: 800
     });
   </script>
