--- a/app/views/public/shared/_carrer-contents.html.erb
+++ b/app/views/public/shared/_carrer-contents.html.erb
@@ -15,5 +15,8 @@
         <%= link_to '代表メッセージ', message_lbr_index_path, class: 'user-btn carrer-btn' %>
       </div>
     </div>
+    <div class="text-center carrer-entry">
+      <%= link_to 'エントリーはこちら', new_job_entry_path, class: 'carrer-entry-link'  %>
+    </div>
   </div>
 </div>
