--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -5,7 +5,7 @@
         <%= image_tag('footer/Icon.png', class: "icon-img sm-max-img") %>
       </div>
       <div class="footer-text1">
-        株式会社LBrestaurant
+        LBrestaurant株式会社
       </div>
       <div class="footer-text2">
         〒553-0006<br>
