--- a/app/views/public_notification_mailer/contact_notification.html.erb
+++ b/app/views/public_notification_mailer/contact_notification.html.erb
@@ -8,8 +8,11 @@
     <% unless @contact.name.nil? %>
       <p><%= @contact.name %>様</p>
     <% end %>
+
+　　 <p>お世話になっております</p>
     <p>この度は、Lbrestaurant株式会社にお問い合わせいただきまして、誠にありがとうございます。</p>
 
+    <p>以下の内容でお問い合わせを受け付けいたしました</p>。
     <p>弊社にて内容を確認のうえ、順次回答させていただきます。</p>
     <p>お急ぎのところ誠に恐れ入りますが、今しばらくお待ちくださいますようお願いいたします。<br> なお、お問い合わせの内容によりましては、回答までにお時間をいただく場合がございます。あらかじめご了承ください。</p>
 
