--- a/app/views/public/lbr/premium.html.erb
+++ b/app/views/public/lbr/premium.html.erb
@@ -14,18 +14,18 @@
   <div class="premium-content">
     <div class="premium-title"><%= image_tag('lbr/premium-title.png', class: 'premium-title-img sm-max-img') %></div>
     <div class="premium-text-box">
-      <p>店舗に電話をし、サシメシ希望の旨を伝えてください。</p>
+      <p>採用フォームからサシ飯を選択してご応募ください！</p>
     </div>
     <i class="fa-solid fa-angles-down"></i>
     <div class="premium-text-box">
-      <p>サシメシの日程を決めます。</p>
+      <p>こちらからメールをお送り致しますので、そこで日程を決めます。</p>
     </div>
     <i class="fa-solid fa-angles-down"></i>
     <div class="premium-text-box">
       <p>社長と飲み食いしながらざっくばらんにお話しください！</p>
     </div>
     <div class="premium-link">
-      <%= link_to 'サシメシ電話はこちら', 'tel:+81664597396', class: 'user-btn premium-btn' %>
+      <%= link_to 'サシメシ応募はこちら', new_job_entry_path, class: 'user-btn premium-btn' %>
     </div>
   </div>
 </div>
