--- a/app/views/public/lbr/staff_interview1.html.erb
+++ b/app/views/public/lbr/staff_interview1.html.erb
@@ -10,7 +10,7 @@
 %>
 
 <div class="interview-section-title-wrap interview1">
-  <div class="sm-display"><%= image_tag('lbr/staff1-interview-img1.png', class: 'staff-show-img') %></div>
+  <div class="sm-display"><%= image_tag('lbr/staff1.png', class: 'staff-show-img') %></div>
   <div class="interview-section-title-box">
     <h1 class="interview-section-title-img"><%= image_tag('lbr/interview-title.png', class: 'interview-title-img') %></h1>
     <p>あそこに入社して成長できた</p>
@@ -30,7 +30,7 @@
         <h3 class="staff-interview-content-subtitle">Question.01</h3>
         <h2 class="staff-interview-content-title">入社の経緯</h2>
         <p class="staff-interview-content-text">
-          入当時、私は飲食会社のスーパーバイザーをしており、飲食未経験の弊社代表の川本社長が入社してきました。未経験ながらも今まで見てきた飲食人の誰よりも熱量のある方で圧倒されました。しばらく共に働き、深い絆を築いた後、本当に一緒に働きたいと思うようになりましたが、個人的な事情で会社を辞めました。その後、彼が独立開業をする話を聞き嬉しく思い、また一緒に働きたいと思ったのですが、元上司は雇いたくはないだろうと思い胸にしまっていました。<br>
+          2019年当時、私は飲食会社のスーパーバイザーをしており、飲食未経験の弊社代表の川本社長が入社してきました。未経験ながらも今まで見てきた飲食人の誰よりも熱量のある方で圧倒されました。しばらく共に働き、深い絆を築いた後、本当に一緒に働きたいと思うようになりましたが、個人的な事情で会社を辞めました。その後、彼が独立開業をする話を聞き嬉しく思い、また一緒に働きたいと思ったのですが、元上司は雇いたくはないだろうと思い胸にしまっていました。<br>
           そんな中、彼が私に、「自分は100店舗8年以内に展開したいと、そのために佐藤が必要だ」とおっしゃってくれました。心からうれしかった。当時、夢物語としか思えませんでしたが、今度は私が社長を支えよう！夢を実現させようと思い入社を決意しました。
         </p>
       </div>
@@ -61,7 +61,7 @@
         <h2 class="staff-interview-content-title">今後の目標について</h2>
         <p class="staff-interview-content-text">
           今現在、川本社長が採用に重点を置き動いてくれているので、確保できた人材をしっかり育成できるように努めたいと思います。<br>
-          早期的にはマインドが共有できる部下を二人創る。<br>
+          短期的にはマインドが共有できる部下を二人創る。<br>
           長期的にはたとえ御社を離れたとしても、あそこはとても勉強になったと思わせる、その人がプラスの人生になれる会社を作ります。
         </p>
       </div>
@@ -86,3 +86,4 @@
   </div>
 </div>
 <%= render 'interview' %>
+<%= render 'public/shared/carrer-contents' %>
