--- a/app/views/public/lbr/staff_interview3.html.erb
+++ b/app/views/public/lbr/staff_interview3.html.erb
@@ -10,7 +10,7 @@
 %>
 
 <div class="interview-section-title-wrap interview3">
-  <div class="sm-display"><%= image_tag('lbr/staff2-sp-interview-section.png', class: 'staff-show-img') %></div>
+  <div class="sm-display"><%= image_tag('lbr/staff3-sp-interview-section.png', class: 'staff-show-img') %></div>
   <div class="interview-section-title-box">
     <h1 class="interview-section-title-img"><%= image_tag('lbr/interview-title.png', class: 'interview-title-img') %></h1>
     <p>お客さまが満足する</p>
@@ -78,3 +78,4 @@
   </div>
 </div>
 <%= render 'interview' %>
+<%= render 'public/shared/carrer-contents' %>
