job_entryの方もmailerを変更

--- a/app/views/public_notification_mailer/contact_notification.html.erb
+++ b/app/views/public_notification_mailer/contact_notification.html.erb
@@ -18,9 +18,9 @@
 
     <p>何かご不明点等ございましたら、お問い合わせくださいませ。<br> 今後とも、LBrestaurant株式会社を宜しくお願い致します。</p>
 
-    ----------------------
-    ■お問い合わせ内容
-    ----------------------
+    <hr>
+    <p>■お問い合わせ内容</p>
+    <hr>
     <p>お問い合わせタイプ:      <%= @contact.contact_type_text %></p>
     <% unless @contact.name.nil? %>
       <p>お名前：　　　　　<%= @contact.name %></p>
