--- a/app/views/public/contacts/confirm.html.erb
+++ b/app/views/public/contacts/confirm.html.erb
@@ -125,9 +125,7 @@
             <i class="fa-solid fa-angle-right"></i>
           </div>
         </div>
+      </div>
     <% end %>
   </div>
 </div>
-
-
-
