渚の削除と、メッセージ削除/サシ飯とかは後ほど修正

--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -13,8 +13,11 @@
           <div class="about-us-title"><%= image_tag('home/about-us-title.png', class: 'about-us-title-img sm-max-img') %></div>
           <p class="about-us-text">
             社名のLBrestaurantとは地域密着の飲食店という意味です。その名の通り、地域になくてはならないと思っていただける飲食店を作ることが理念です。<br>
-            そして、その過程や結果により全従業員が少しでも豊かな人生を物心両面で歩めることを最大の目的としています。<br>
-            全従業員が豊かになれるよう、さまざまな取り組みをしています。
+            僕らが目指すのは、<strong>「他の会社行くよりここにきてよかった」</strong>と思える会社にすることです。
+            しかし、一つだけ条件があります。それは成長意欲のある人です。
+            能力の差なんかほぼ存在しないと考えています。
+            大切なのは気持ちです。
+            そんな成長意欲のある人をとことんサポートする会社、報われる会社に一緒にしていきましょう。
           </p>
           <div class="about-us-link">
             <%= link_to 'LBrestaurantの特徴', lbr_index_path, class: 'user-btn about-us-btn' %>
