--- a/app/views/public/job_entries/show.html.erb
+++ b/app/views/public/job_entries/show.html.erb
@@ -77,19 +77,25 @@
         <div class="job-entry-card-text-icon-sm">
           <div class="job-entry-card-text-icon">勤務地</div>
         </div>
-        <p class="job-entry-card-text">会社が指定する店舗<br class="sm-display">（野田本店・香里園店）</p>
+        <p class="job-entry-card-text">
+          直営店舗大阪中心<br>
+          ※地方からの転居や、店舗近隣への転居者には、引越し手当て支給。自転車圏内で通えるサポートをしています。 勤務地は、希望を考慮したうえで決めていきます。
+        </p>
       </div>
       <div class="job-entry-card-text-box">
         <div class="job-entry-card-text-icon-sm">
-          <div class="job-entry-card-text-icon">業務内容</div>
+          <div class="job-entry-card-text-icon">仕事内容</div>
         </div>
-        <p class="job-entry-card-text">ホール・キッチン業務全般、数値管理など焼き鳥屋の運営に関する全ての業務</p>
+        <p class="job-entry-card-text">キッチン・ホールの仕事からスタートしていただきますが、並行して新たなメニューやお客様向けのキャンペーン、社内制度の企画など、店舗運営に関わるすべての業務に携わっていただきます。</p>
       </div>
       <div class="job-entry-card-text-box">
         <div class="job-entry-card-text-icon-sm">
           <div class="job-entry-card-text-icon">給与</div>
         </div>
-        <p class="job-entry-card-text">未経験23万～ 経験者25～ 店長・マネージャー候補28～32万</p>
+        <p class="job-entry-card-text">
+          月給28万円以上（一率手当含）  ※試用期間6ヶ月あり〔契約社員〕 ※経験や年齢を考慮し決定します。 <br>
+          ※上記金額には、みなし残業45時間分（8万円以上）を含みます。超過分は別途支給します。
+        </p>
       </div>
       <div class="job-entry-card-text-box">
         <div class="job-entry-card-text-icon-sm">
