--- a/app/views/public/lbr/message.html.erb
+++ b/app/views/public/lbr/message.html.erb
@@ -20,18 +20,15 @@
       <p class="owner-message-text">
         はじめまして、当社のホームページをご覧いただきありがとうございます。<br>
         突然ですが、私には夢があります。<br>
-        私の夢はこのブラックな飲食業界を変えることです。<br>
-        そのためには、オーナー自身の覚悟が問われます。会社の存続と従業員を豊かにすることを同時に達成する覚悟です。
+        私の夢はこのブラックな飲食業界を変えることです。
       </p>
       <p class="owner-message-text">
         私自身、３７歳まで飲食業界とは無縁でした。<br>
-        そこから一念発起し、飲食業界で独立することを決め、勉強のため縁のあった前職の会社に就職しました。<br>
-        未上場の企業の中では、前職は全然マシな方だと思いますが、それでも低収入・長時間労働と、ビジネスモデルとして
-        高い給料を払えないなど、多くの問題を抱えていることに直面しました。<br>
-        一方で、優秀な人は独立していく。（半数以上は失敗しますが。。）<br>
-        このような業界をなんとか変えたいと働きながら感じるようになりました。<br>
-        具体的には、アルバイトが本気で憧れ、そのまま就職したくなるような会社（店）を作ることです。<br>
-        ※現状は真逆
+        そこから一念発起し、飲食業界で独立することを決め、飲食業界に飛び込みました。<br>
+        長時間労働、少ない休日、数字に追われる日々、報われない体質。元々営業メインで仕事していた私にとっては、すごく違和感を感じました。<br>
+        <strong>「こんな業界をどうにしかしたい！」</strong>と思い、2022年の8月に修行時代の上司であり、飲食の師匠ともいえる佐藤とともに独立しました。<br>
+        まだまだ道半ばで、弊社もブラックとも言える環境があるかもしれません。<br>
+        みんながここにおってよかった！そんなふうに思える会社〔店〕を共に作っていける仲間を常に探しています！
       </p>
       <p class="owner-message-text">
         独立後、自分の店を立ち上げ、その思いはさらに強くなりました。２店舗目を出店し、若い店長に１店舗目を任せてからです。<br>
