ほぼほぼ修正完了、後は体験入店の修正

--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -13,11 +13,10 @@
           <div class="about-us-title"><%= image_tag('home/about-us-title.png', class: 'about-us-title-img sm-max-img') %></div>
           <p class="about-us-text">
             社名のLBrestaurantとは地域密着の飲食店という意味です。その名の通り、地域になくてはならないと思っていただける飲食店を作ることが理念です。<br>
-            僕らが目指すのは、<strong>「他の会社行くよりここにきてよかった」</strong>と思える会社にすることです。
-            しかし、一つだけ条件があります。それは成長意欲のある人です。
-            能力の差なんかほぼ存在しないと考えています。
-            大切なのは気持ちです。
-            そんな成長意欲のある人をとことんサポートする会社、報われる会社に一緒にしていきましょう。
+            経営において最も重要な要素の１つが、働き続けたいと思える会社づくりです。LBRが考える良い会社、それは<strong>「多様な価値観が共存できる会社」</strong>です。
+            「プライベートを最優先したい」「夢を追いかけたい」「たくさん稼ぎたい」など、仕事に求めることは人それぞれ違いますし、なりたい自分になれる環境を整えていきます。<br>
+            大切なのはその時の気持ちに素直に従い働き方を決める事です。<br>
+            一緒にいい会社を作りましょう。
           </p>
           <div class="about-us-link">
             <%= link_to 'LBrestaurantの特徴', lbr_index_path, class: 'user-btn about-us-btn' %>
@@ -27,10 +26,10 @@
       <div class="home-premium-content">
         <div class="home-premium-title-box">
           <h4 class="home-premium-subtitle">＼ホームページ限定特典／</h4>
-          <h3 class="home-premium-title">社長とサシメシ</h3>
+          <h3 class="home-premium-title">体験入店</h3>
         </div>
         <div class="home-premium-info">
-          <p class="home-premium-text">採用情報に興味がある方はぜひホームページ限定特典の「社長とサシメシ（社長のおごりで店舗でご飯を食べながら座談会）」をご覧ください！</p>
+          <p class="home-premium-text">採用情報に興味がある方はぜひホームページ限定特典の「体験入店」をご覧ください！</p>
           <div class="premium-link">
             <%= link_to '詳しく見る', premium_lbr_index_path, class: 'user-btn home-premium-btn' %>
           </div>
