--- a/app/views/public/lbr/message.html.erb
+++ b/app/views/public/lbr/message.html.erb
@@ -31,26 +31,8 @@
         みんながここにおってよかった！そんなふうに思える会社〔店〕を共に作っていける仲間を常に探しています！
       </p>
       <p class="owner-message-text">
-        独立後、自分の店を立ち上げ、その思いはさらに強くなりました。２店舗目を出店し、若い店長に１店舗目を任せてからです。<br>
-        彼は非常によく仕事してくれています。<br>
-        その彼ともしくは彼のような若くて勢いのある人をどうすれば豊かにできるのか。<br>
-        この答えにこそ自分がこの業界で頑張る意味があると考えました。<br>
-        その結果のれん分け制度が１つの方法だという結論に至りました。
-      </p>
-      <p class="owner-message-text">
-        まずは直営店で地域で愛される店を創出し、その店をそのまま店長にのれん分けの形で託すことで達成できると確信に至りました。<br>
-        直営店の形で店長を経験してもらい、そのまま店を買い取る形で独立を促していく。<br>
-        これを拡大していくことで、独立できる能力のある人が失敗することなく独立できます。
-      </p>
-      <p class="owner-message-text">
-        さらに、飲食店は休みを１日とるだけで５万以上はマイナスになります。
-        ここを本部や他の独立オーナーと協力し合うことで、店休することなく休みをとることが可能になります。
-        このように優秀な社員が自社を通じてのれん分けしていくことで高収入ときちんと休みをとれる業界に変えていきます。
-        また多くの業態で同様のことをしていきたいと考えています。
-      </p>
-      <p class="owner-message-text">
         このメッセージを見ているあなたも、ぜひともに飲食業界を憧れの業界にしていきませんか？<br>
-        少しでも興味があれば、私とサシメシしてもらってもいいですし、<br>
+        少しでも興味があれば、私と体験入店してもらってもいいですし、<br>
         ご応募してもらってももちろん大丈夫です。<br>
         同じ志を持って頑張れる仲間はいつでも歓迎です。			
       </p>
