--- a/app/views/public/lbr/show.html.erb
+++ b/app/views/public/lbr/show.html.erb
@@ -49,8 +49,7 @@
     <div class="lbr-mission-title"><%= image_tag('lbr/mission-title.png', class: 'mission-title-img sm-max-img') %></div>
     <ul class="lbr-mission-text-box">
       <li>地域で１番の○○を多くの業態で創出する（流行りはおわない）</li>
-      <li>ぼったくりのないのれん分け制度を確立する</li>
-      <li>自助・共助の精神で各オーナーや本部と助け合うことで休みをとれる体制を構築する</li>
+      <li>飲食店運営のプロの排出</li>
     </ul>
     <div class="lbr-dream-link">
       <%= link_to '代表メッセージ', message_lbr_index_path, class: 'user-btn lbr-dream-btn' %>
