fix/体験入店に変更と、新しいページの作成

--- a/app/views/public/company/show.html.erb
+++ b/app/views/public/company/show.html.erb
@@ -92,7 +92,7 @@
             <span class="company-form">
               <p>
                 代表取締役:<span class="ms-3">川本哲也</span><br>
-                取締役:<span class="ms-3">佐藤保</span>
+                執行役員:<span class="ms-3">佐藤保</span>
               </p>
             </span>
           </td>
