--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -13,8 +13,8 @@
           <div class="about-us-title"><%= image_tag('home/about-us-title.png', class: 'about-us-title-img sm-max-img') %></div>
           <p class="about-us-text">
             社名のLBrestaurantとは地域密着の飲食店という意味です。その名の通り、地域になくてはならないと思っていただける飲食店を作ることが理念です。<br>
-            経営において最も重要な要素の１つが、働き続けたいと思える会社づくりです。LBRが考える良い会社、それは<strong>「多様な価値観が共存できる会社」</strong>です。
-            「プライベートを最優先したい」「夢を追いかけたい」「たくさん稼ぎたい」など、仕事に求めることは人それぞれ違いますし、なりたい自分になれる環境を整えていきます。<br>
+            経営において最も重要な要素の１つが、働き続けたいと思える会社づくりです。弊社が考える良い会社、それは<strong>「多様な価値観が共存できる会社」</strong>です。
+            「プライベートを最優先したい」「夢を追いかけたい」「たくさん稼ぎたい」など、仕事に求めることは人それぞれ違います。あなたのなりたい自分になれる環境を整えていきます。<br>
             大切なのはその時の気持ちに素直に従い働き方を決める事です。<br>
             一緒にいい会社を作りましょう。
           </p>
