--- a/app/views/public/job_entries/show.html.erb
+++ b/app/views/public/job_entries/show.html.erb
@@ -1,9 +1,9 @@
 <% set_meta_tags  title: '採用情報',
-                  description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の採用情報ページです。　他の企業にはないLBR独自の制度 「社長とサシ飯行きませんか？」 ブラックな飲食業界を変える！店長の高収入×店長の人間らしい生活を同時に達成する。',
+                  description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の採用情報ページです。ブラックな飲食業界を変える！店長の高収入×店長の人間らしい生活を同時に達成する。',
                   canonical: 'https://lbrestaurant.net/job_entries/',
                   og: {
                     title: '採用情報 | LBrestaurant(株式会社)公式サイト(暖簾分け希望者、求職者募集中!)',
-                    description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の採用情報ページです。　他の企業にはないLBR独自の制度 「社長とサシ飯行きませんか？」 ブラックな飲食業界を変える！店長の高収入×店長の人間らしい生活を同時に達成する。',
+                    description: 'LBrestaurant株式会社の公式ホームページ。LBrestaurant株式会社の採用情報ページです。ブラックな飲食業界を変える！店長の高収入×店長の人間らしい生活を同時に達成する。',
                     type: 'article',
                     url: 'https://lbrestaurant.net/job_entries/'
                   }
@@ -40,7 +40,10 @@
       <p class="job-system-card-subtitle">制度1</p>
       <div class="job-system-card-title"><%= image_tag('job_entry/system-card-title1.png', class: 'system-card-title1-img sm-max-img') %></div>
       <div class="job-system-card-text job-system-card-text-margin">
-        <p>社長とサシ飯。実際に働くとどうなるのか？どんなキャリアがあるのか？社長ってどんな人なのか？どんな会社なのか？社長のおごりで運営店舗で食事(酒あり)しながらの座談会です！</p>
+        <p>
+          体験入店。実際に働くとどうなるのか？どんな会社なのか？実際に体験してみてください！<br>
+          仕事後は役員と軽く食事でもいきましょう！
+        </p>
       </div>
       <div class="premium-link">
         <%= link_to '詳しく見る', premium_lbr_index_path, class: 'user-btn system-premium-btn' %>
