--- a/app/views/public/lbr/premium.html.erb
+++ b/app/views/public/lbr/premium.html.erb
@@ -1,4 +1,4 @@
-<% set_meta_tags  title: '社長とサシ飯',
+<% set_meta_tags  title: '体験入店',
                   description: 'LBrestaurant株式会社の公式ホームページ。他の企業にはないLBR独自の制度「体験入店」、実際にお店にアルバイトとして入り、どういう企業なのか、何を目指しているのか、など体験してみてください！',
                   canonical: 'https://lbrestaurant.net/lbr/premium/',
                   og: {
