--- a/app/views/public/lbr/show.html.erb
+++ b/app/views/public/lbr/show.html.erb
@@ -48,8 +48,9 @@
     </div>
     <div class="lbr-mission-title"><%= image_tag('lbr/mission-title.png', class: 'mission-title-img sm-max-img') %></div>
     <ul class="lbr-mission-text-box">
-      <li>地域で１番の○○を多くの業態で創出する（流行りはおわない）</li>
-      <li>飲食店運営のプロの排出</li>
+      <li>ここに来てよかったとお客様に思ってもらえる店を作ること。</li>
+      <li>ここに来てよかったと従業員に思ってもらえる会社にしていくこと。</li>
+      <li>ここと取引してよかったと取引先に思ってもらえる会社にしていくこと。</li>
     </ul>
     <div class="lbr-dream-link">
       <%= link_to '代表メッセージ', message_lbr_index_path, class: 'user-btn lbr-dream-btn' %>
