--- a/app/views/public/lbr/_interview.html.erb
+++ b/app/views/public/lbr/_interview.html.erb
@@ -5,7 +5,7 @@
       <%= link_to staff_interview1_lbr_index_path do %>
         <div class="interview-card">
           <div class="staff-img"><%= image_tag('lbr/staff1.png', class: 'owner-img') %></div>
-          <div class="staff-post">取締役</div>
+          <div class="staff-post">執行役員</div>
           <div class="staff-name">佐藤 保<span class="staff-name-en">TAMOTSU SATO</span></div>
           <div class="employ-date">創業メンバー</div>
           <div class="staff-text">
