--- a/app/views/public/lbr/staff_interview1.html.erb
+++ b/app/views/public/lbr/staff_interview1.html.erb
@@ -16,7 +16,7 @@
     <p>あそこに入社して成長できた</p>
     <p>そう思われる環境を提供したい</p>
     <div  class="staff-post-box">
-      <div class="staff-post">取締役</div>
+      <div class="staff-post">執行役員</div>
     </div>
     <div class="staff-name">佐藤 保<span class="staff-name-en">TAMOTSU SATO</span></div>
     <div class="employ-date">創業メンバー</div>
